--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,19 @@
   <body>
     <div id="content"></div>
     <script type="text/babel">
-      
+      var CommentBox = React.createClass({
+        render: function() {
+          return (
+            <div className="CommentBox">
+              Hello, world! I am a CommentBox.
+            </div>
+            );
+        }
+      });
+      ReactDOM.render(
+        <CommentBox />,
+        document.getElementById('content')
+        );
     </script>
   </body>
 </html>
