--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,52 @@
   <body>
     <div id="content"></div>
     <script type="text/babel">
-      var CommentBox = React.createClass({displayName: 'CommentBox', render: function(){
-        return (
-          React.createElement('div', {className: "commentBox"}, "Hello, world! I am a CommentBox.")
+      var CommentBox = React.createClass({
+        render: function() {
+          return (
+            <div className="commentBox">
+              <h1>Comments</h1>
+              <CommentList />
+              <CommentForm />
+            </div>
+          );
+        }
+      });
+      
+      var CommentList = React.createClass({
+        render: function() {
+          return (
+            <div className="commentList">
+             <Comment author="Chris Mark">This is one comment</Comment>
+             <Comment author="Eunice Choi">This is *another* comment</Comment>
+            </div>
+           );
+          }
+        });
+      var CommentForm = React.createClass({
+        render: function (){
+          return (
+            <div className="commentForm">
+              Hello, world! I am a CommentForm.
+            </div>
+          );
+        }
+      });
+
+      var Comment = React.createClass({
+        rawMarkup: function(){
+          var rawMarkup = marked(this.props.children.toString(), {sanitize: true});
+          return { __html: rawMarkup};
+        },
+
+        render: function() {
+          return (
+            <div className="comment">
+              <h2 className="commentAuthor">
+                {this.props.author}
+              </h2>
+              {marked(this.props.children.toString())}
+            </div>
           );
         }
       });
